.aliases.zsh added & .motd.sh modified & .tmux.conf mod & .wgetrc added & pkgInstalled.txt mod

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,15 @@
+### TMUX CONFIGURATION HACKED TOGETHER FROM
+### THE INTERWEBS AND GOOGLE SEARCH OF
+### "COOL TMUX CONFIG"
+
+# use 256 xterm for better pretty colors
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # change prefix to ctrl+a
 unbind C-b
-set -g prefix C-a
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # set wait time between prefix and command
 set -g escape-time 5
@@ -8,7 +17,10 @@ set -g escape-time 5
 # set window index to start @ 1
 set -g base-index 1
 # and for panes
-set -g pane-base-index 1
+setw -g pane-base-index 1
+
+# renumber windows when one is closed
+set -g renumber-windows on
 
 # mouse support on
 set -g mouse on
@@ -28,3 +40,36 @@ unbind w
 bind n command-prompt "rename-window '%%'"
 bind w new-window -c "#{pane_current_path}"
 
+
+### STATUS BAR
+
+# enable UTF-8 support
+set -gq status-utf8 on
+
+# set refresh rate
+set -g status-interval 30
+
+# center that status bar
+set -g status-justify centre
+
+# show session, window, pane in left status bar
+set -g status-left-length 40
+set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan]#P '
+
+# show hostname date time 100
+set -g status-right '#(battery -t) #[fg=cyan] %d %b %R'
+
+### COLORS EVERYWHERE
+
+# color the status bar
+set -g status-style fg=white,bg=colour235
+# color the msg bar
+set -g message-style fg=white,bold,bg=green
+
+# highlight current window
+setw -g window-status-style fg=cyan,bg=colour235
+setw -g window-status-current-style fg=white,bold,bg=red
+
+# set color of active pane
+set -g pane-border-style fg=colour240,bg=black
+set -g pane-active-border-style fg=green,bg=black
